--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^10.16.2",
     "mongoose": "^7.5.2",
     "next": "13.4.19",
     "next-page-transitions": "^1.0.0-beta.2",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,5 +38,8 @@
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.5"
   }
 }
